Fix getUsersWithClassifications implementation (#243)
* Implement native query in Java

* Fix test

* Give GHA permissions for Github packages

* Bump version of klass-shared for klass-api